Add game demo to project

--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./lib/queryable.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" type="text/css" href="./css/ttt.css">
+    <script src="./lib/queryable.js"></script>
+    <script src="./lib/ttt-game/bundle.js"></script>
   </head>
+
   <body>
-    <a href="https://i.redd.it/d07ms0qif4u01.jpg">Bunny</a>
-    <a href="https://i.redd.it/hbrrouj0t7u01.jpg">Cat</a>
-    <a href="https://i.redd.it/zi42d3vt5vqz.jpg">Cat and Bunny</a>
+    <h1>Tic Tac Toe</h1>
 
-    <input id="check1" type="checkbox" checked="checked"> 
-
-    <div class="cat-names">
-      <ol>
-        <li>Tom</li>
-        <li>Ron</li>
-        <li>Harry</li>
-        <li>Potter</li>
-      </ol>
-    </div>
-
-    <ul>
-      <li>Wow</li>
-      <li>Cool</li>
-      <li>Beans</li>
-    </ul>
-
+    <figure class="ttt"></figure>
   </body>
 </html>
