--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" type="text/css" href="./css/ttt.css">
     <script src="./lib/queryable.js"></script>
     <script src="./lib/ttt-game/bundle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   </head>
 
   <body>
     <h1>Tic Tac Toe</h1>
-
+    <p class="player-won"></p>
     <figure class="ttt"></figure>
   </body>
 </html>
+
+<!-- webpack --watch lib/ttt-game/main.js -o lib/ttt-game/bundle.js --mode=development -->
+<!-- webpack --watch lib/main.js -o lib/queryable.js --mode=development -->
