--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" type="text/css" href="./css/ttt.css">
+    <link rel="icon" href="./assets/img/favicon.ico">
     <script src="./lib/queryable.js"></script>
     <script src="./lib/ttt-game/bundle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
