--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="icon" href="./assets/img/favicon.ico">
     <script src="./lib/queryable.js"></script>
     <script src="./lib/ttt-game/bundle.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
   </head>
 
   <body>
     <h1>Tic Tac Toe</h1>
     <p class="player-won"></p>
     <figure class="ttt"></figure>
+
+    <div class="personal-info">
+      <a href="https://www.linkedin.com/in/brian-liew-b6246655/"><img class="linkedin" src="./assets/img/icons/linkedin-black.png" alt="linkedin-img"></a>
+      <a href="https://github.com/bliew93"><img class="github" src="./assets/img/icons/gh-black.png" alt="github-img"></a>
+      <a href="http://brianliew.com/"><img class="personal" src="./assets/img/icons/personal-black.png" alt="personal-img"></a>
+    </div>
   </body>
 </html>
 
